# Core-1

./: CMakeLists.txt  README.md  main.cpp
core/api/: auth.cpp  routes.cpp  server.cpp
core/audio/: mel.cpp  whisper.cpp
core/configs/: cluster.yaml  gpt4o.yaml  safety.yaml
core/dataloader/: dataset.cpp
core/distributed/: fsdp.cpp  main.cpp  mpi.cpp  nccl.cpp
core/logging/: audit.cpp
core/model/: attention.cu  block.cpp  embedding.cpp  gpt.cpp  kv_cache.cpp  sampler.cpp
core/monitoring/: metrics.cpp  prometheus.cpp
core/optimizer/: zero.cpp
core/quant/: fp8.cpp  int4.cpp  int8.cpp
core/retrieval/: embedder.cpp  loader.cpp
core/runtime/: engine.cpp  memory.cpp  scheduler.cpp
core/safety/: jailbreak.cpp  moderation.cpp  rate_limit.cpp
core/tokenizer/: 'merges.txt  sentencepiece.cpp  vocab.json
core/tools/: benchmark.cpp  convert_weights.py  profiler.cpp
core/vision/: vit.cpp
core/vision/transformer/: clip.cpp
